# rtweekend

./: Cargo.toml  image.ppm  rustfmt.toml
.cargo/: config.toml
examples/: integrate_x_sq.rs  list_devices.rs  pi.rs
src/: camera.rs  hitable_list.rs  lib.rs  main.rs  material.rs  materials.rs  pdf.rs  perlin.rs  ray.rs  sphere.rs  texture.rs  transform.rs  volume.rs  vulkan.rs
src/containers/: bvh.rs  list.rs  mod.rs
src/hit/: aabb.rs  bvh.rs  hittable.rs  instance.rs  list.rs  material.rs  mod.rs  ray.rs
src/math/: mod.rs  onb.rs  vec2.rs  vec3.rs  vec3_impl.rs
src/objects/: cuboid.rs  mod.rs  rect.rs  sphere.rs
src/shapes/: cuboid.rs  rect.rs  sphere.rs
src/texture/: mod.rs  perlin.rs
