[package]
name = "raytrace"
version = "0.1.0"
authors = ["pluto"]
edition = "2018"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raytrace"
path = "src/main.rs"

[dependencies]
winit = "0.24.0"
rand = "0.8.3"
rayon = "1.5.0"
nalgebra = { version = "0.25.3", features = ["rand"] }
nalgebra-glm = "0.11.0"
wgpu = "0.7"
tokio = { version = "1.4", features = ["macros", "rt"]}
