[package]
name = "raytrace"
version = "0.1.0"
authors = ["pluto"]
edition = "2018"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raytrace"
path = "src/main.rs"

[dependencies]
winit = "0.24.0"
rand = "0.8.3"
rayon = "1.5.0"
nalgebra = { version = "0.25.3", features = ["rand"] }
nalgebra-glm = "0.11.0"
pixels = { git = "https://github.com/parasyte/pixels" }
bytemuck = "1.5.1"
once_cell = "1"
image = {version = "0.23", default-features = false, features = ["jpeg"] }

[profile.dev]
opt-level = 1

[profile.release]
incremental = true
overflow-checks = true
# lto = "thin"