[package]
name = "raytrace2"
version = "0.1.0"
authors = ["pluth <pluth@0t.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels" }
rayon = "1.5.0"
winit = "0.24.0"
bytemuck = "1"
wgpu = "0.7"
rand = "0.8"
nalgebra = "0.25.4"
indicatif = { version = "0.15", features = ["rayon"]}
once_cell = "1"
itertools = "0.10.0"

[profile.release]
incremental = true